spring boot runs. no home screen, but it's a start